@@ -2,9 +2,9 @@
 PROJNAME="JFuncGen"
 MAINCLASS="se.wetterstrom.jfuncgen.JFuncGen"
 PROJDIR="$HOME/git/jfuncgen"
-JAVA_HOME="/opt/jdk-23"
 M2REPO="$HOME/.m2/repository"
-
+PROJ_JAVA_HOME=/opt/jdk-21
+MAVEN_JAVA_HOME=/opt/jdk-21
 export JAVA_HOME
 
 error()
@@ -22,6 +22,7 @@ PROJ_JAR="$PROJDIR/target/jfuncgen-$VER.jar"
 
 if [ ! -f  "$PROJ_JAR" ]; then
   echo "[build]"
+  JAVA_HOME="$MAVEN_JAVA_HOME"
   mvn package -DskipTests || error "Failed to build"
 fi
 
@@ -29,6 +30,8 @@ CP=`mvn dependency:build-classpath -Dmdep.includeScope=runtime -Dmdep.outputFile
 [ -n "$CP" ] || error "Failed to get dependencies"
 
 if [ -r "$PROJ_JAR" ]; then
+  export JAVA_HOME="$PROJ_JAVA_HOME"
+  export JDK_JAVA_OPTIONS="--enable-native-access=ALL-UNNAMED"
   [ -x "$JAVA_HOME/bin/java" ] || error "No JVM in $JAVA_HOME"
   echo "[run]"
   exec "$JAVA_HOME/bin/java" -Xmx4096m -classpath $PROJ_JAR:$CP $MAINCLASS $*
